2007-06-11  Miloslav Trmač  <mitr@redhat.com>

	* configure.in: Add AM_PROG_CC_C_O.
	(BINDIR, SBINDIR, DATADIR, LOCALEDIR, SYSCONFDIR): Remove.  These
	definitions are expanded at the wrong time and tend to be expanded
	incorrectly.
	(AC_CONFIG_FILES): Remove consolehelper.8 and userhelper.8.
	* Makefile.am (AM_CPPFLAGS, BINDIR_CPPFLAGS, PIXMAPDIR_CPPFLAGS)
	(SBINDIR_CPPFLAGS, userhelper_CPPFLAGS, userinfo_CPPFLAGS)
	(usermount_CPPFLAGS, userpasswd_CPPFLAGS, consolehelper_CPPFLAGS)
	(consolehelper_gtk_CPPFLAGS, pam_panel_icon_CPPFLAGS): New variables.
	(consolehelper.8, userhelper.8): New rules.
	(AM_CFLAGS): Move -DGETTEXT_PACKAGE to pam_panel_icon_CPPFLAGS.
	* userinfo.c (create_userinfo_window): Use PKGDATADIR.
	* pam-panel-icon.c (refresh_tray_icon)
	* userhelper-wrap.c (userhelper_parse_childout)
	* userinfo.c (create_userinfo_window)
	* usermount.c (create_usermount_window): Use PIXMAPDIR.

	* userhelper-wrap.c (userhelper_parse_childout): Fix a memory leak.

	* userhelper.c (wrap, main): Use the locale's charset.
	(converse_console): Don't re-set the charset to the locale's charset,
	it is now the default.
	* userhelper-wrap.c (write_childin_string): New function.
	(userhelper_write_childin): Convert written data to the locale's
	charset if possible.  Simplify and reformat.
	(userhelper_runv): Convert data read from the child from the locale's
	charset to UTF-8.

	* userhelper-wrap.c: Remove unnecessary #includes.

	* userinfo.c: Remove unnecessary #includes.

	* userhelper-wrap.c (userhelper_parse_childout): Modify to handle only
	one line.  Exit if the commmand code is invalid.
	(userhelper_read_childout): Always read a complete line, not what
	partial line happens to be read.  Repeat while there are lines left.
	(userhelper_runv): Don't assume the communication is in UTF-8.  Set the
	only expected line terminator.  Don't make the channel non-blocking to
	make sure a partial line is always read until it is finished.
